--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xibecode",
-  "version": "0.0.1",
-  "description": "AI-powered autonomous coding assistant with advanced context handling",
+  "version": "2.0.0",
+  "description": "AI-powered autonomous coding assistant with test integration, git awareness, and plugin support",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
