--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xibecode",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "AI-powered autonomous coding assistant with test integration, git awareness, and plugin support",
   "main": "dist/index.js",
   "type": "module",
@@ -38,23 +38,25 @@
   "homepage": "https://github.com/yourusername/xibecode#readme",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.32.1",
-    "commander": "^12.0.0",
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "chalk": "^5.3.0",
-    "ora": "^8.0.1",
-    "inquirer": "^9.2.12",
-    "dotenv": "^16.3.1",
+    "commander": "^12.0.0",
     "conf": "^12.0.0",
     "diff": "^5.1.0",
+    "dotenv": "^16.3.1",
     "fast-glob": "^3.3.2",
+    "inquirer": "^9.2.12",
     "node-fetch": "^3.3.2",
-    "strip-ansi": "^7.1.0"
+    "ora": "^8.0.1",
+    "strip-ansi": "^7.1.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
     "@types/diff": "^5.0.8",
     "@types/inquirer": "^9.0.7",
-    "typescript": "^5.3.3",
+    "@types/node": "^20.10.0",
     "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
     "vitest": "^1.0.4"
   },
   "engines": {
