chore: remove embedded Skill-marketplace repo from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ coverage/
 # Optional: uncomment if you don't want to track lockfiles (bun.lock / pnpm-lock.yaml)
 # bun.lock
 # pnpm-lock.yaml
+Skill-marketplace
