--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.32.1",
     "@modelcontextprotocol/sdk": "^1.26.0",
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.2",
     "commander": "^12.0.0",
     "conf": "^12.0.0",
     "diff": "^5.1.0",
@@ -49,9 +49,9 @@
     "ink-markdown": "^1.0.4",
     "ink-select-input": "^6.2.0",
     "ink-text-input": "^6.0.0",
-    "inquirer": "^9.2.12",
+    "inquirer": "^8.2.7",
     "node-fetch": "^3.3.2",
-    "ora": "^8.0.1",
+    "ora": "^5.4.1",
     "react": "^19.2.4",
     "strip-ansi": "^7.1.0",
     "zod": "^4.3.6"
@@ -60,6 +60,8 @@
     "@types/diff": "^5.0.8",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.0",
+    "@types/puppeteer": "^7.0.4",
+    "puppeteer": "^24.37.2",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
