--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "prepare": "npm run build",
-    "test": "vitest"
+    "test": "vitest",
+    "docs:generate": "typedoc --options typedoc.json",
+    "docs:watch": "typedoc --options typedoc.json --watch",
+    "docs:serve": "npx http-server ./docs/api-generated -p 8080 -o"
   },
   "keywords": [
     "cli",
