--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "start": "node dist/index.js",
     "prepare": "npm run build",
     "test": "vitest",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:report": "playwright show-report",
     "docs:generate": "typedoc --options typedoc.json",
     "docs:watch": "typedoc --options typedoc.json --watch",
-    "docs:serve": "npx http-server ./docs/api-generated -p 8080 -o"
+    "docs:serve": "npx http-server ./docs/api-generated -p 8080 -o",
+    "postinstall": "npx playwright install chromium"
   },
   "keywords": [
     "cli",
@@ -55,14 +60,14 @@
     "ora": "^5.4.1",
     "react": "^19.2.4",
     "strip-ansi": "^7.1.0",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "playwright": "^1.41.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.2",
     "@types/diff": "^5.0.8",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.0",
-    "@types/puppeteer": "^7.0.4",
-    "puppeteer": "^24.37.2",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
