--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xibecode",
-  "version": "0.3.8",
-  "description": "AI-powered autonomous coding assistant with test integration, git awareness, and plugin support",
+  "version": "0.3.9",
+  "description": "AI-powered autonomous coding assistant with WebUI, AI test generation, multi-model support, and plugin system",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
@@ -18,6 +18,8 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:report": "playwright show-report",
+    "ui": "tsx src/index.ts ui --open",
+    "ui:dev": "tsx watch src/index.ts ui",
     "docs:generate": "typedoc --options typedoc.json",
     "docs:watch": "typedoc --options typedoc.json --watch",
     "docs:serve": "npx http-server ./docs/api-generated -p 8080 -o",
@@ -30,7 +32,9 @@
     "assistant",
     "autonomous",
     "agent",
-    "automation"
+    "automation",
+    "webui",
+    "test-generation"
   ],
   "author": "Anish Kumar (R3AP3R editz) <https://github.com/iotserver24>",
   "license": "Apache-2.0",
@@ -57,17 +61,20 @@
     "ink-text-input": "^6.0.0",
     "inquirer": "^8.2.7",
     "node-fetch": "^3.3.2",
+    "open": "^10.0.0",
     "ora": "^5.4.1",
+    "playwright": "^1.41.2",
     "react": "^19.2.4",
     "strip-ansi": "^7.1.0",
-    "zod": "^4.3.6",
-    "playwright": "^1.41.2"
+    "ws": "^8.16.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@playwright/test": "^1.41.2",
     "@types/diff": "^5.0.8",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.0",
+    "@types/ws": "^8.5.10",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
