--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -36,9 +36,10 @@ jobs:
         run: npx playwright install --with-deps chromium
 
       - name: Run E2E tests
-        run: pnpm run test:e2e
+        run: pnpm run test:e2e --project=chromium
         env:
           CI: true
+          SKIP_WEBUI_TESTS: true
 
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
