--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,17 +3,15 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 10
+      interval: "monthly"
+    open-pull-requests-limit: 3
     labels:
       - "dependencies"
     groups:
-      dev-dependencies:
+      # Group all minor/patch updates into one PR
+      all-dependencies:
         patterns:
-          - "@types/*"
-          - "typescript"
-          - "vitest"
-          - "playwright"
+          - "*"
         update-types:
           - "minor"
           - "patch"
@@ -21,16 +19,28 @@ updates:
   - package-ecosystem: "npm"
     directory: "/site"
     schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 5
+      interval: "monthly"
+    open-pull-requests-limit: 2
     labels:
       - "dependencies"
       - "site"
+    groups:
+      site-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
 
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "monthly"
+    open-pull-requests-limit: 1
     labels:
       - "dependencies"
       - "github-actions"
+    groups:
+      actions:
+        patterns:
+          - "*"
