refactor: update project structure and dependencies
- Revise .gitignore to streamline ignored files and add coverage directory
- Remove obsolete next.config.ts, playwright.config.ts, postcss.config.js, tailwind.config.ts, and globals.css files
- Update package.json with new dependencies and scripts for build and development
- Enhance tsconfig.json with improved settings for TypeScript compilation
- Refactor layout and page components in the app directory for better organization and functionality
- Integrate AI chat component into documentation layout

This commit focuses on cleaning up the project structure, enhancing TypeScript configurations, and updating dependencies to improve overall maintainability and performance.

--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "baseUrl": ".",
+    "target": "ESNext",
     "lib": [
       "dom",
       "dom.iterable",
@@ -9,6 +10,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
@@ -17,16 +19,19 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "incremental": true,
+    "paths": {
+      "@/*": [
+        "./*"
+      ],
+      "fumadocs-mdx:collections/*": [
+        ".source/*"
+      ]
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+    ]
   },
   "include": [
     "next-env.d.ts",
@@ -36,6 +41,9 @@
     ".next/dev/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "vetradocs-vitepress",
+    "vetradocs-scalar",
+    "vetradocs-docusaurus"
   ]
 }
