--- a/site/.gitignore
+++ b/site/.gitignore
@@ -1,33 +1,30 @@
-# dependencies
+# deps
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
+# generated content
+.source
+/public/search-index.json
+*/search-index.json
+
+
+
+# test & build
 /coverage
-
-# next.js
 /.next/
 /out/
-
-# production
 /build
+*.tsbuildinfo
 
 # misc
 .DS_Store
 *.pem
-
-# debug
+/.pnp
+.pnp.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# others
 .env*.local
-
-# vercel
 .vercel
-
-# typescript
-*.tsbuildinfo
 next-env.d.ts
