--- a/site/package.json
+++ b/site/package.json
@@ -1,33 +1,47 @@
 {
-  "name": "xibecode-website",
+  "name": "xibecode site",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
-    "build": "next build",
-    "start": "next start -p 3001",
-    "lint": "next lint",
-    "test": "playwright test",
-    "test:ui": "playwright test --ui",
-    "test:headed": "playwright test --headed",
-    "test:report": "playwright show-report"
+    "build:index": "node scripts/build-index.mjs",
+    "build": "npm run build:index && next build",
+    "dev": "next dev",
+    "start": "next start",
+    "types:check": "fumadocs-mdx && next typegen && tsc --noEmit",
+    "postinstall": "fumadocs-mdx",
+    "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.462.0"
+    "@langchain/core": "^1.1.5",
+    "@langchain/openai": "^1.2.0",
+    "@orama/orama": "^3.1.16",
+    "@orama/plugin-data-persistence": "^3.1.16",
+    "clsx": "^2.1.1",
+    "fumadocs-core": "16.2.4",
+    "fumadocs-mdx": "14.1.0",
+    "fumadocs-ui": "16.2.4",
+    "langchain": "^1.2.0",
+    "lit": "^3.3.1",
+    "lucide-react": "^0.556.0",
+    "next": "^16.1.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.41.2",
-    "@types/node": "^22.0.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "@tailwindcss/typography": "^0.5.15"
+    "@eslint/eslintrc": "^3.3.3",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^24.10.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.10",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.7"
   }
 }
