--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "playwright": "^1.41.2",
     "react": "^19.2.4",
     "strip-ansi": "^7.1.0",
+    "ts-morph": "^27.0.2",
     "ws": "^8.16.0",
     "zod": "^4.3.6"
   },
